syntax = "proto3";

package com.example.internalapi.request.author.create.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/author.proto";
import "com/example/internalapi/model/error/error.proto";

message CreateAuthorRequest {
  example.internalapi.model.Author author = 1;
}

message CreateAuthorResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    example.internalapi.model.Author author = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      example.internalapi.model.Error unknown_error = 1;
    }
  }
}
