syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/author/create.proto";

service CreateAuthorService {
  rpc createAuthor(com.example.internalapi.request.author.create.proto.CreateAuthorRequest)
      returns (com.example.internalapi.request.author.create.proto.CreateAuthorResponse);
}
